test/files/neg/t12879/Test.scala
// scalac: -deprecation -Werror
class C {
  val x: A = A.Foo
  val y: A = A.Bar
}
